<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_margin="5dp"
    tools:context=".bca.sixthsem.EBooksSixthUploadActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ebook_pdf_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_pdf_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top|center">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="14dp"
            android:text="@string/upload_pdf"
            android:textColor="@color/white"
            android:background="@drawable/rounded_cornor"
            android:textSize="20sp"
            android:id="@+id/upload_ebook_pdf"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:background="@drawable/rounded_cornor"
            android:padding="14dp"
            android:textSize="20sp"
            android:id="@+id/back"/>

    </LinearLayout>

</LinearLayout>